kustomize/overlay/internal-profiles/idm-only/idm/deployment.yaml
#Patch PingIDM
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idm
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: openidm
        imagePullPolicy: Always
        resources: {}
