kustomize/overlay/internal-profiles/idm-only/idm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idm
spec:
  tls:
    - hosts:
      - "prod.iam.example.com"
      secretName: "prod.iam.example.com"
  rules:
    - host: "prod.iam.example.com"
